<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    app:barrierMargin="4dp"
    app:cardBackgroundColor="#14673AB7"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="104dp"
            android:layout_height="87dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_description"
            android:padding="10dp" />

        <TextView
            android:id="@+id/set_num_and_set_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/set_num"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/set_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/set_num_and_set_name"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="@string/set_year"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/set_num_parts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/set_year"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:text="@string/set_num_parts" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_add_to_wishlist"
                android:layout_width="128dp"
                android:layout_height="60dp"
                android:layout_marginTop="115dp"
                android:insetLeft="16dp"
                android:text="@string/btn_add_to_wishlist" />

            <Button
                android:id="@+id/btn_add_to_collection"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_marginTop="115dp"
                android:insetLeft="16dp"
                android:text="@string/btn_add_to_my_collection" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>